<?xml version="1.0"?>
<package>
  <name>buildit_msgs</name>
  <version>1.0.0</version>
  <description>The buildit_msgs package</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>GPL</license>

  <author email="dash@clearpathrobotics.com">Devon Ash</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
